--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     },
     "dependencies": {
         "core-js": "^3.8.0",
-        "js-binary-schema-parser": "git+ssh://git@git001.vgemv.com:60022/wuml/jsBinarySchemaParser.git"
+        "js-binary-schema-parser": "https://gitee.com/wmlgl/jsBinarySchemaParser.git"
     }
 }
