--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "gifuct-js",
-    "version": "2.0.0",
+    "name": "gifuct-js-fix",
+    "version": "2.0.2",
     "description": "Easy to use efficient .GIF parsing in javascript",
     "main": "lib/index.js",
     "scripts": {
